add the contact page, linked to the home page

--- a/main.css
+++ b/main.css
@@ -29,6 +29,18 @@ body {
   background: rgb(231, 226, 221);
   z-index: 1;
 }
+
+.footerbar {
+  position: sticky;
+  top: 0;
+  height: 50px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background: rgb(231, 226, 221);
+  z-index: 1;
+}
+
 .navbar-center {
   width: 100%;
   max-width: 1170px;
