--- a/contactStyle.css
+++ b/contactStyle.css
@@ -8,6 +8,15 @@ font-family: 'poppins', sans-serif;
 
 }
 
+
+.hero {
+    min-height: calc(100vh - 60px);
+    background: url("./images/hero-bcg.jpeg") center/cover no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
 .contact{
     position: relative;
     min-height: 100vh;
